airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T130646.724541+0000/task_id=run_pipeline_3/attempt=1.log
[2026-06-03T13:06:48.945+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T13:06:48.984+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_3 manual__2026-06-03T13:06:46.724541+00:00 [queued]>
[2026-06-03T13:06:48.996+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_3 manual__2026-06-03T13:06:46.724541+00:00 [queued]>
[2026-06-03T13:06:48.997+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2026-06-03T13:06:49.030+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_3> on 2026-06-03 13:06:46.724541+00:00
[2026-06-03T13:06:49.042+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2368) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T13:06:49.039+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_3', 'manual__2026-06-03T13:06:46.724541+00:00', '--job-id', '150', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmp47o514hv']
[2026-06-03T13:06:49.044+0000] {standard_task_runner.py:63} INFO - Started process 2372 to run task
[2026-06-03T13:06:49.044+0000] {standard_task_runner.py:91} INFO - Job 150: Subtask run_pipeline_3
[2026-06-03T13:06:49.096+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_3 manual__2026-06-03T13:06:46.724541+00:00 [running]> on host c3bf940c8326
[2026-06-03T13:06:49.204+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_3' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T13:06:46.724541+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T13:06:46.724541+00:00'
[2026-06-03T13:06:49.205+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T13:06:49.223+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T13:06:49.225+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 3']
[2026-06-03T13:06:49.236+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T13:07:05.158+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.159+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:05.161+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:07:05.162+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:05.163+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:07:05.164+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:07:05.165+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:07:05.167+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T13:07:05.168+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:07:05.171+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:05.172+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.174+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:07:05.175+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.176+0000] {subprocess.py:93} INFO - Running pipeline: postgres_to_postgres_pipeline (db_to_db)
[2026-06-03T13:07:05.177+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.178+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:05.179+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:07:05.180+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:05.181+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:07:05.182+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:07:05.183+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:07:05.184+0000] {subprocess.py:93} INFO - DATABASE  : udifdb
[2026-06-03T13:07:05.185+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:07:05.186+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:07:05.187+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.188+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:07:05.189+0000] {subprocess.py:93} INFO - Completed: 4653 rows processed
[2026-06-03T13:07:05.190+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:07:05.191+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 61, in main
[2026-06-03T13:07:05.192+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:07:05.193+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:07:05.195+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:07:05.196+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:07:05.197+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:07:05.198+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:07:05.199+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.200+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.201+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T13:07:05.202+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.203+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:07:05.203+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 94, in <module>
[2026-06-03T13:07:05.204+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T13:07:05.205+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 79, in main
[2026-06-03T13:07:05.206+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:07:05.208+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:07:05.209+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:07:05.211+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:07:05.212+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:07:05.213+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:07:05.214+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:07:05.498+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T13:07:05.512+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T13:07:05.534+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T13:07:05.547+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_3, run_id=manual__2026-06-03T13:06:46.724541+00:00, execution_date=20260603T130646, start_date=20260603T130648, end_date=20260603T130705
[2026-06-03T13:07:05.578+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 150 for task run_pipeline_3 (Bash command failed. The command returned a non-zero exit code 1.; 2372)
[2026-06-03T13:07:05.594+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T13:07:05.629+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T13:07:05.633+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
